test/sema/typeck/pattern/enum-variant-type-mismatch.out
error: Pattern does not match type Foo
--> enum-variant-type-mismatch.dora:4:9
 | enum Bar { C(Int64), D }
 | fn f(x: Foo): Int64 {
 |     let Bar::C(y) = x;
           ~~~~~~~~~
 |     y
 | }
1 error found.
