test/sema/typeck/pattern/enum-variant-type-mismatch.dora
enum Foo { A(Int64), B }
enum Bar { C(Int64), D }
fn f(x: Foo): Int64 {
    let Bar::C(y) = x;
    y
}
